--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.525.0",
     "ogl": "^1.0.11",
     "react": "^19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "tailwind-merge": "^3.3.1"
