--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.38.1",
+    "@clerk/localizations": "^3.20.6",
     "@clerk/themes": "^2.4.4",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
