--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
 VITE_HEXAGON_API_BASE_URL=https://hexagon-api-9uyv.onrender.com
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_cGxlYXNlZC1oZWRnZWhvZy0xMC5jbGVyay5hY2NvdW50cy5kZXYk
