--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "react-horizontal-datepicker": "^2.0.3",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
